# timer

./: Makefile  README.md  pyproject.toml  termclock.spec
src/: app.py
src/cli/: __init__.py  cli.py
src/core/: termclock.py
src/tui/: __init__.py  countdown.py  stopwatch.py  theme.tcss
