[project]
name = "chronox"
version = "0.2.7"
description = "A terminal based stopwatch and countdown timer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
    "typer>=0.21.0",
]

[project.scripts]
clk = "app:main"
chronox = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app.py", "src/tui", "src/core", "src/cli"]
include = ["src/tui/theme.tcss"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true