[project]
name = "time-manager"
version = "0.2.17"
description = "A terminal based stopwatch and countdown timer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
    "typer>=0.21.0",
]

[project.scripts]
tm = "app:main"
time-manager = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app.py", "src/tui", "src/core", "src/cli"]
include = ["src/tui/theme.tcss"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true